k8s_manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app
  labels:
    app: my-flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
      - name: flask-visitor-app
        image: gauravchanda/flask-visitor-app:v2
        ports:
        - containerPort: 5000
