k8s_manifests/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app
spec:
  type: ClusterIP
  selector:
    app: my-flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
